<resources>
    <string name="app_name">Lab05</string>

    <string-array name="estados">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Roraima</item>
        <item>Rondônia</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>

    <string name="nome">Nome Completo</string>
    <string name="email">E-mail</string>
    <string name="idade">Idade</string>

    <string name="fem">Feminino</string>
    <string name="mas">Masculino</string>

    <string name="s">Sim</string>
    <string name="n">Não</string>

    <string name="at">Atualizações automáticas?</string>

    <string name="act">Aceito os termos da aplicação</string>
</resources>
