<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/nome"
        android:ems="10"
        android:id="@+id/nome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:ems="10"
        android:id="@+id/email"
        android:layout_below="@+id/nome"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:text="@string/idade"
        android:ems="10"
        android:id="@+id/idade"
        android:layout_below="@+id/email"
        android:layout_alignStart="@+id/email" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Estados"
        android:entries="@array/estados"
        android:layout_below="@+id/idade"
        android:layout_alignStart="@+id/idade"
        android:spinnerMode="dropdown" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Estados"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fem"
            android:id="@+id/fem"
            android:layout_gravity="center_horizontal"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mas"
            android:id="@+id/mas"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/at"
            android:id="@+id/editText"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/s"
            android:textOff="@string/n"
            android:id="@+id/botao"
            android:layout_gravity="right"
            android:layout_below="@id/mas" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act"
            android:id="@+id/checkBox"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/Estados"
            android:layout_marginStart="145dp" />

    </RadioGroup>

</RelativeLayout>
